--- a/aisettings/src/main/res/layout/fragment_aisettings_line.xml
+++ b/aisettings/src/main/res/layout/fragment_aisettings_line.xml
@@ -9,7 +9,29 @@
         android:id="@+id/touch_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentTop="true" />
+        android:layout_alignParentTop="true">
+
+<!--        <LinearLayout-->
+<!--            android:id="@+id/selected_v"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="100px"-->
+<!--            android:background="@drawable/rectangle"-->
+<!--            android:orientation="horizontal" />-->
+
+<!--        <LinearLayout-->
+<!--            android:id="@+id/selected_h"-->
+<!--            android:layout_width="9px"-->
+<!--            android:layout_height="match_parent"-->
+<!--            android:gravity="center"-->
+<!--            android:orientation="horizontal">-->
+
+<!--            <LinearLayout-->
+<!--                android:layout_width="1px"-->
+<!--                android:layout_height="match_parent"-->
+<!--                android:background="@color/YELLOW" />-->
+<!--        </LinearLayout>-->
+
+    </com.flyzebra.aisettings.view.TouchEventView>
 
     <ScrollView
         android:layout_width="match_parent"
