--- a/mdvrset/src/main/res/layout/fragment_adasset1_go.xml
+++ b/mdvrset/src/main/res/layout/fragment_adasset1_go.xml
@@ -25,7 +25,8 @@
         android:layout_height="@dimen/title_bar_height"
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="@dimen/bar_choise_item_margin_bottom"
-        android:text="@string/start_calibration" />
+        android:text="@string/start_calibration"
+        android:textColor="@color/black" />
 
     <Button
         android:id="@+id/calibration_start_dms_btn"
@@ -34,6 +35,7 @@
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="@dimen/bar_choise_item_margin_bottom"
         android:text="@string/start_dms_calibration"
+        android:textColor="@color/black"
         android:visibility="gone" />
 
     <View
