--- a/mdvrset/src/main/res/layout/activity_adasset.xml
+++ b/mdvrset/src/main/res/layout/activity_adasset.xml
@@ -16,7 +16,7 @@
         android:layout_height="@dimen/title_bar_height"
         android:layout_alignParentBottom="true"
         android:orientation="horizontal"
-        android:visibility="visible">
+        android:visibility="invisible">
 
         <LinearLayout
             android:id="@+id/adas_view_ll"
@@ -70,5 +70,24 @@
                 android:text="@string/settings"
                 android:textSize="10sp" />
         </LinearLayout>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="64dp"
+        android:gravity="center">
+
+        <TextView
+            android:id="@+id/message"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="#7FFFFFFF"
+            android:gravity="center"
+            android:padding="8dp"
+            android:textColor="#AFFF0000"
+            android:textSize="24sp"
+            android:visibility="invisible" />
     </LinearLayout>
 </RelativeLayout>
