--- a/mdvrset/src/main/res/values-zh-rCN/arrays.xml
+++ b/mdvrset/src/main/res/values-zh-rCN/arrays.xml
@@ -28,6 +28,8 @@
         <item>通道2</item>
         <item>通道3</item>
         <item>通道4</item>
+        <item>通道5</item>
+        <item>通道6</item>
     </string-array>
 
     <string-array name="spinnerpicturequality">
