--- a/mdvrset/src/main/res/values/arrays.xml
+++ b/mdvrset/src/main/res/values/arrays.xml
@@ -28,6 +28,8 @@
         <item>Channel 2</item>
         <item>Channel 3</item>
         <item>Channel 4</item>
+        <item>Channel 5</item>
+        <item>Channel 6</item>
     </string-array>
 
     <string-array name="spinnerpicturequality">
