--- a/mdvrset/src/main/res/layout/activity_main.xml
+++ b/mdvrset/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -7,4 +7,23 @@
         android:id="@+id/ac_main_listview"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
-</LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="64dp"
+        android:gravity="center">
+
+        <TextView
+            android:id="@+id/message"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="#7FFFFFFF"
+            android:gravity="center"
+            android:padding="8dp"
+            android:textColor="#AFFF0000"
+            android:textSize="24sp"
+            android:visibility="invisible" />
+    </LinearLayout>
+</RelativeLayout>
