--- a/mdvrset/src/main/res/layout/activity_mdvr.xml
+++ b/mdvrset/src/main/res/layout/activity_mdvr.xml
@@ -35,7 +35,8 @@
             android:background="@drawable/def_button"
             android:gravity="center"
             android:text="@string/system_reboot"
-            android:textSize="12sp" />
+            android:textSize="12sp"
+            android:visibility="gone" />
 
         <Button
             android:id="@+id/fm_phone_screendpi"
@@ -45,7 +46,7 @@
             android:background="@drawable/def_button"
             android:gravity="center"
             android:text="@string/screen_dpi"
-            android:textSize="12sp" />
+            android:textSize="12sp"/>
 
         <Button
             android:id="@+id/fm_phone_powerkey"
@@ -55,7 +56,7 @@
             android:background="@drawable/def_button"
             android:gravity="center"
             android:text="@string/power_key"
-            android:textSize="12sp" />
+            android:textSize="12sp"/>
 
         <Button
             android:id="@+id/fm_phone_voladd"
@@ -65,7 +66,8 @@
             android:background="@drawable/def_button"
             android:gravity="center"
             android:text="@string/volumn_add"
-            android:textSize="12sp" />
+            android:textSize="12sp"
+            android:visibility="gone"/>
 
         <Button
             android:id="@+id/fm_phone_voldel"
@@ -75,7 +77,8 @@
             android:background="@drawable/def_button"
             android:gravity="center"
             android:text="@string/volumn_del"
-            android:textSize="12sp" />
+            android:textSize="12sp"
+            android:visibility="gone"/>
 
         <Button
             android:id="@+id/fm_phone_backkey"
@@ -95,7 +98,8 @@
             android:background="@drawable/def_button"
             android:gravity="center"
             android:text="@string/home_key"
-            android:textSize="12sp" />
+            android:textSize="12sp"
+            android:visibility="gone"/>
 
         <Button
             android:id="@+id/fm_phone_exitfull"
