--- a/mdvrset/src/main/res/layout/mdvr_list_item.xml
+++ b/mdvrset/src/main/res/layout/mdvr_list_item.xml
@@ -1,22 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/item_root"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/white"
     android:gravity="center"
     android:orientation="horizontal"
-    android:padding="10dp">
+    android:layout_margin="1dp"
+    android:weightSum="3">
 
     <com.flyzebra.mdrvset.view.mdvrview.MdvrItemView
         android:id="@+id/mdvrview"
-        android:layout_width="128dp"
-        android:layout_height="72dp" />
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1" />
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:background="#3F00FF00"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_weight="2"
+        android:orientation="vertical"
+        android:paddingStart="5dp"
+        tools:ignore="RtlSymmetry">
 
         <TextView
             android:id="@+id/mdvr_name"
