--- a/mdvrset/src/main/res/values/colors.xml
+++ b/mdvrset/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#ececec</color>
-    <color name="purple_700">#cccccc</color>
+    <color name="purple_500">#FF3F7FDD</color>
+    <color name="purple_700">#FF2F94D7</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
