--- a/mdvrset/src/main/res/layout/activity_main.xml
+++ b/mdvrset/src/main/res/layout/activity_main.xml
@@ -21,10 +21,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="#7FFFFFFF"
-            android:gravity="center"
+            android:gravity="start|center"
             android:padding="8dp"
             android:textColor="#AFFF0000"
-            android:textSize="24sp"
+            android:textSize="18sp"
             android:visibility="invisible" />
     </LinearLayout>
 </RelativeLayout>
