--- a/mdvrset/src/main/res/layout/activity_mdvr.xml
+++ b/mdvrset/src/main/res/layout/activity_mdvr.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:customs="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#000"
@@ -22,8 +21,7 @@
         android:id="@+id/ac_phone_menu"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginStart="12sp"
-        android:gravity="start|center"
+        android:gravity="center"
         android:orientation="vertical"
         android:visibility="invisible">
 
@@ -116,13 +114,11 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <com.flyzebra.mdrvset.view.CircleImageView
+        <ImageView
             android:id="@+id/ac_phone_fbutton"
             android:layout_width="48dp"
             android:layout_height="48dp"
-            android:src="@mipmap/ic_launcher"
-            android:visibility="invisible"
-            customs:borderColor="@color/white"
-            customs:borderWidth="2dp" />
+            android:src="@drawable/float_button"
+            android:visibility="invisible"/>
     </RelativeLayout>
 </RelativeLayout>
