--- a/mdvrset/src/main/res/layout/fragment_adasset.xml
+++ b/mdvrset/src/main/res/layout/fragment_adasset.xml
@@ -35,7 +35,7 @@
 
     <include
         android:id="@+id/fm_aiset_start_layout"
-        layout="@layout/fragment_adasset1_go"
+        layout="@layout/fragment_set_go"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/gl_ffplay"
@@ -43,7 +43,7 @@
 
     <include
         android:id="@+id/fm_aiset_line_layout"
-        layout="@layout/fragment_adasset1_line"
+        layout="@layout/fragment_adasset_line"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/toolbar"
