--- a/mdvrset/src/main/res/layout/activity_mdvr.xml
+++ b/mdvrset/src/main/res/layout/activity_mdvr.xml
@@ -11,7 +11,7 @@
         android:layout_height="match_parent"
         android:gravity="center">
 
-        <com.flyzebra.mdrvset.view.mdvrview.MdvrFullView
+        <com.flyzebra.mdrvset.view.remote.RcFullView
             android:id="@+id/ac_phoneview"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
