--- a/mdvrset/src/main/res/layout/activity_adasset.xml
+++ b/mdvrset/src/main/res/layout/activity_adasset.xml
@@ -84,7 +84,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="#7FFFFFFF"
-            android:gravity="center"
+            android:gravity="start|center"
             android:padding="8dp"
             android:textColor="#AFFF0000"
             android:textSize="24sp"
