--- a/mdvrset/src/main/res/layout/activity_adasset.xml
+++ b/mdvrset/src/main/res/layout/activity_adasset.xml
@@ -84,10 +84,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="#7FFFFFFF"
-            android:gravity="start|center"
+            android:gravity="center"
             android:padding="8dp"
             android:textColor="#AFFF0000"
-            android:textSize="24sp"
+            android:textSize="20sp"
             android:visibility="invisible" />
     </LinearLayout>
 </RelativeLayout>
