--- a/mdvrset/src/main/res/drawable/item_rectangle.xml
+++ b/mdvrset/src/main/res/drawable/item_rectangle.xml
@@ -2,8 +2,7 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:left="-4dp"
-        android:right="-4dp"
-        android:top="-4dp">
+        android:right="-4dp">
         <shape>
             <solid android:color="#00000000" />
             <stroke
