--- a/mdvrset/src/main/res/layout/fragment_bdsset.xml
+++ b/mdvrset/src/main/res/layout/fragment_bdsset.xml
@@ -10,7 +10,7 @@
         android:orientation="horizontal">
 
         <Spinner
-            android:id="@+id/bsd_spinner"
+            android:id="@+id/bsd_channel_spinner"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_alignParentStart="true"
