--- a/mdvrset/src/main/res/layout/fragment_bdsset_line.xml
+++ b/mdvrset/src/main/res/layout/fragment_bdsset_line.xml
@@ -7,8 +7,54 @@
 
     <com.flyzebra.mdrvset.view.BsdSetView
         android:id="@+id/bsdSetView"
-        android:background="#FFFFFFFF"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentTop="true" />
+        android:layout_alignParentTop="true"
+        android:background="#FFFFFFFF" />
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/bsdSetView"
+        android:layout_alignParentBottom="true">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="1dp"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/bsd_set_textinfo"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/item_rectangle"
+                android:paddingStart="2dp" />
+
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="55dp"
+                android:background="@drawable/item_rectangle">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_alignParentStart="true"
+                    android:gravity="center"
+                    android:paddingStart="2dp"
+                    android:text="@string/bsd_calib_direction"
+                    android:textSize="16sp" />
+
+                <Spinner
+                    android:id="@+id/bsd_camera_spinner"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_alignParentEnd="true"
+                    android:entries="@array/bsdcameradirection"
+                    android:minWidth="120dp"
+                    android:textSize="16sp" />
+            </RelativeLayout>
+        </LinearLayout>
+    </ScrollView>
 </RelativeLayout>
